--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             the scenes look at many of our top alumni. Members have the opportunity to interact with an array of alumni and gain great networking skills hosting alumni events as student ambassadors. </p>
 
           
-          <h3 class="text-white mb-4">Meet our Alumini</h3>
+          <h3 class="text-white mb-4">Meet our Alumni</h3>
           <hr class="accessory" width="50%">
           <br>
 
